<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginBottom="30dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#7A8089"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:backgroundTint="@color/black"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:iconTint="#050505"
                app:cornerRadius="30dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvScoresDataBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="35dp"
        android:textStyle="italic"
        android:textColor="@color/green"/>


</LinearLayout>